--- a/package.json
+++ b/package.json
@@ -25,10 +25,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@supabase/supabase-js": "^2.22.0",
+    "github-slugger": "^2.0.0",
+    "mdast": "^3.0.0",
+    "mdast-util-from-markdown": "^1.3.0",
+    "mdast-util-mdx": "^2.0.1",
+    "mdast-util-to-markdown": "^1.5.0",
+    "mdast-util-to-string": "^3.2.0",
+    "micromark-extension-mdxjs": "^1.0.1",
+    "openai": "^3.2.1",
+    "unist-builder": "^3.0.1",
+    "unist-util-filter": "^4.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.1",
     "@types/node": "^20.2.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.41.0",
