Adds the dist check back

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Rebuild the dist/ directory
         run: |
+          npm run build
           npm run package
 
       - name: Compare the expected and actual dist/ directories
