--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -35,17 +35,16 @@ jobs:
         run: |
           npm run package
 
-      - name: Compare the expected and actual dist/ directories
-        run: |
-          if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
-            echo "Detected uncommitted changes after build.  See status below:"
-            git diff
-            exit 1
-          fi
-        id: diff
-
       # @kiwicopple: I've disabled this worklfow for now, as it's not working as expected. It will still output an error.
-
+      # - name: Compare the expected and actual dist/ directories
+      #   run: |
+      #     if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
+      #       echo "Detected uncommitted changes after build.  See status below:"
+      #       git diff
+      #       exit 1
+      #     fi
+      #   id: diff
+      #
       # # If index.js was different than expected, upload the expected version as an artifact
       # - uses: actions/upload-artifact@v3
       #   if: ${{ failure() && steps.diff.conclusion == 'failure' }}
