--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@actions/core": "^1.10.1",
     "@supabase/supabase-js": "^2.38.4",
     "github-slugger": "^2.0.0",
+    "gpt-tokenizer": "^2.8.1",
+    "gray-matter": "^4.0.3",
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^1.3.0",
     "mdast-util-mdx": "^2.0.1",
